  --------------------------  HepMC-2.03.00  --------------------------
2007-10-30  Lynn Garren

	* examples/example_ReadMyPythia.cc: New example to read the file 
	  written by example_MyPythia.

	* doc: remove the latex subdirectory after building the reference library

	* GenEvent: add print_version( std::ostream& ) method.
	  If you don't specify an ostream, the default is std::cout.

	* GenVertex: Store particles in vectors instead of sets.
	  Root IO does not properly restore the state of the particle 
	  serial number counter, so the previous solution to retaining
	  consistent particle ordering within a vertex had to be revisited.

	* IO_GenEvent: Replace the temparary particle map with TempParticleMap.

	* HepMC/SearchVector.h: Utilities to facilitate working with the
	  vector of particles.

	* HepMC/TempParticleMap.h: Temporary particle container that 
	  allows us to maintain particle ordering when reading an event 
	  with IO_Ascii and IO_ExtendedAscii.

	* Use fully qualified names (e.g., HepMC::GenParticle) inside class
	  templates (e.g., std::map<>) wherever they are used within a 
	  header so that rootcint can make the dictionary.

  --------------------------  HepMC-2.02.01  --------------------------

2007-10-16  Lynn Garren

	* configure.in: build dynamic libraries for MacOSX - thanks to James Monk

  --------------------------  HepMC-2.02.00  --------------------------

2007-07-19  Lynn Garren

	* IO_GenEvent: uses input and output streams
	  IO_GenEvent can be constructed with a file, an input stream, or
	  an output stream.
	* IO_Ascii and IO_ExtendedAscii are deprecated.
	* examples use IO_GenEvent

  --------------------------  HepMC-2.01.08  --------------------------

2007-10-23  Lynn Garren

	* GenVertex: Store particles in vectors instead of sets.
	  Root IO does not properly restore the state of the particle 
	  serial number counter, so the previous solution to retaining